# vasp_projected_bandplot

./: LICENSE  README.md  pyproject.toml  run.py
src/vasp_bandplot/: __init__.py
src/vasp_bandplot/io/: plot_band.py  read.py
test/: run.py
